syntax = "proto3";

package Neuro.Recording.DeadBodies;

import "Utilities/MyVector2.proto";

message DeadBodyData {
    uint32 ParentId = 1;
    Utilities.MyVector2 Position = 2;
    float FirstSeenTime = 3;
    bytes NearbyPlayers = 4;
}
